methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:17: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean ={
                   ^SlugSnail:34: error: identifier expected but '}' found.
}
^